--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 	font-family:Roboto;
 	font-weight:300;
 	font-size:16px;
-	color:#777;
+	color: black;
 	line-height:1.7;
 }
 h1,h2,h3,h4,h5,h6 {
